parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> sentencias
Rule 2     sentencias -> sentencias sentencia
Rule 3     sentencias -> sentencia
Rule 4     sentencia -> print PTCOMA
Rule 5     sentencia -> RLET ID DOSPTS tipo IGUAL expresion PTCOMA
Rule 6     sentencia -> RLET ID PTCOMA
Rule 7     sentencia -> RLET ID IGUAL expresion PTCOMA
Rule 8     sentencia -> RLET ID DOSPTS tipo PTCOMA
Rule 9     sentencia -> RINTERFACE ID LLAVEI atributos LLAVED
Rule 10    atributos -> ID DOSPTS tipo PTCOMA atributos
Rule 11    atributos -> ID DOSPTS tipo PTCOMA
Rule 12    tipo -> RSTRING
Rule 13    tipo -> RANY
Rule 14    tipo -> RNUMBER
Rule 15    tipo -> RBOOLEAN
Rule 16    print -> RCONSOLE PT RLOG PARENI expresion PAREND
Rule 17    expresion -> expresion MAS expresion
Rule 18    expresion -> expresion MENOS expresion
Rule 19    expresion -> expresion MUL expresion
Rule 20    expresion -> expresion DIV expresion
Rule 21    expresion -> expresion MOD expresion
Rule 22    expresion -> expresion POT expresion
Rule 23    expresion -> NOT expresion
Rule 24    expresion -> expresion IGUALACION expresion
Rule 25    expresion -> expresion DISTINTO expresion
Rule 26    expresion -> expresion MAYORQ expresion
Rule 27    expresion -> expresion MENORQ expresion
Rule 28    expresion -> expresion MAYORIG expresion
Rule 29    expresion -> expresion MENORIG expresion
Rule 30    expresion -> expresion OR expresion
Rule 31    expresion -> expresion AND expresion
Rule 32    expresion -> MENOS expresion
Rule 33    expresion -> PARENI expresion PAREND
Rule 34    expresion -> RTRUE
Rule 35    expresion -> RFALSE
Rule 36    expresion -> RNULL
Rule 37    expresion -> ENTERO
Rule 38    expresion -> DECIMAL
Rule 39    expresion -> CADENA
Rule 40    expresion -> nativa
Rule 41    expresion -> CORI valores CORD
Rule 42    valores -> expresion COMA valores
Rule 43    valores -> expresion
Rule 44    nativa -> tofixed
Rule 45    nativa -> toexponential
Rule 46    nativa -> tostring
Rule 47    nativa -> tolowercase
Rule 48    nativa -> touppercase
Rule 49    nativa -> split
Rule 50    nativa -> concat
Rule 51    tofixed -> expresion PT RFIXED PARENI expresion PAREND
Rule 52    toexponential -> expresion PT REXPONENTIAL PARENI expresion PAREND
Rule 53    tostring -> expresion PT RTSTRING PARENI PAREND
Rule 54    tolowercase -> expresion PT RLC PARENI PAREND
Rule 55    touppercase -> expresion PT RUC PARENI PAREND
Rule 56    split -> expresion PT RSPLIT PARENI expresion PAREND
Rule 57    concat -> expresion PT RCONCAT PARENI expresion PAREND

Terminals, with rules where they appear

AND                  : 31
CADENA               : 39
COMA                 : 42
CORD                 : 41
CORI                 : 41
DECIMAL              : 38
DISTINTO             : 25
DIV                  : 20
DOSPTS               : 5 8 10 11
ENTERO               : 37
ID                   : 5 6 7 8 9 10 11
IGUAL                : 5 7
IGUALACION           : 24
LLAVED               : 9
LLAVEI               : 9
MAS                  : 17
MAYORIG              : 28
MAYORQ               : 26
MENORIG              : 29
MENORQ               : 27
MENOS                : 18 32
MOD                  : 21
MUL                  : 19
NOT                  : 23
OR                   : 30
PAREND               : 16 33 51 52 53 54 55 56 57
PARENI               : 16 33 51 52 53 54 55 56 57
POT                  : 22
PT                   : 16 51 52 53 54 55 56 57
PTCOMA               : 4 5 6 7 8 10 11
RANY                 : 13
RBOOLEAN             : 15
RCONCAT              : 57
RCONSOLE             : 16
REXPONENTIAL         : 52
RFALSE               : 35
RFIXED               : 51
RINTERFACE           : 9
RLC                  : 54
RLET                 : 5 6 7 8
RLOG                 : 16
RNULL                : 36
RNUMBER              : 14
RSPLIT               : 56
RSTRING              : 12
RTRUE                : 34
RTSTRING             : 53
RUC                  : 55
error                : 

Nonterminals, with rules where they appear

atributos            : 9 10
concat               : 50
expresion            : 5 7 16 17 17 18 18 19 19 20 20 21 21 22 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 42 43 51 51 52 52 53 54 55 56 56 57 57
inicio               : 0
nativa               : 40
print                : 4
sentencia            : 2 3
sentencias           : 1 2
split                : 49
tipo                 : 5 8 10 11
toexponential        : 45
tofixed              : 44
tolowercase          : 47
tostring             : 46
touppercase          : 48
valores              : 41 42

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . sentencias
    (2) sentencias -> . sentencias sentencia
    (3) sentencias -> . sentencia
    (4) sentencia -> . print PTCOMA
    (5) sentencia -> . RLET ID DOSPTS tipo IGUAL expresion PTCOMA
    (6) sentencia -> . RLET ID PTCOMA
    (7) sentencia -> . RLET ID IGUAL expresion PTCOMA
    (8) sentencia -> . RLET ID DOSPTS tipo PTCOMA
    (9) sentencia -> . RINTERFACE ID LLAVEI atributos LLAVED
    (16) print -> . RCONSOLE PT RLOG PARENI expresion PAREND

    RLET            shift and go to state 5
    RINTERFACE      shift and go to state 6
    RCONSOLE        shift and go to state 7

    inicio                         shift and go to state 1
    sentencias                     shift and go to state 2
    sentencia                      shift and go to state 3
    print                          shift and go to state 4

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> sentencias .
    (2) sentencias -> sentencias . sentencia
    (4) sentencia -> . print PTCOMA
    (5) sentencia -> . RLET ID DOSPTS tipo IGUAL expresion PTCOMA
    (6) sentencia -> . RLET ID PTCOMA
    (7) sentencia -> . RLET ID IGUAL expresion PTCOMA
    (8) sentencia -> . RLET ID DOSPTS tipo PTCOMA
    (9) sentencia -> . RINTERFACE ID LLAVEI atributos LLAVED
    (16) print -> . RCONSOLE PT RLOG PARENI expresion PAREND

    $end            reduce using rule 1 (inicio -> sentencias .)
    RLET            shift and go to state 5
    RINTERFACE      shift and go to state 6
    RCONSOLE        shift and go to state 7

    sentencia                      shift and go to state 8
    print                          shift and go to state 4

state 3

    (3) sentencias -> sentencia .

    RLET            reduce using rule 3 (sentencias -> sentencia .)
    RINTERFACE      reduce using rule 3 (sentencias -> sentencia .)
    RCONSOLE        reduce using rule 3 (sentencias -> sentencia .)
    $end            reduce using rule 3 (sentencias -> sentencia .)


state 4

    (4) sentencia -> print . PTCOMA

    PTCOMA          shift and go to state 9


state 5

    (5) sentencia -> RLET . ID DOSPTS tipo IGUAL expresion PTCOMA
    (6) sentencia -> RLET . ID PTCOMA
    (7) sentencia -> RLET . ID IGUAL expresion PTCOMA
    (8) sentencia -> RLET . ID DOSPTS tipo PTCOMA

    ID              shift and go to state 10


state 6

    (9) sentencia -> RINTERFACE . ID LLAVEI atributos LLAVED

    ID              shift and go to state 11


state 7

    (16) print -> RCONSOLE . PT RLOG PARENI expresion PAREND

    PT              shift and go to state 12


state 8

    (2) sentencias -> sentencias sentencia .

    RLET            reduce using rule 2 (sentencias -> sentencias sentencia .)
    RINTERFACE      reduce using rule 2 (sentencias -> sentencias sentencia .)
    RCONSOLE        reduce using rule 2 (sentencias -> sentencias sentencia .)
    $end            reduce using rule 2 (sentencias -> sentencias sentencia .)


state 9

    (4) sentencia -> print PTCOMA .

    RLET            reduce using rule 4 (sentencia -> print PTCOMA .)
    RINTERFACE      reduce using rule 4 (sentencia -> print PTCOMA .)
    RCONSOLE        reduce using rule 4 (sentencia -> print PTCOMA .)
    $end            reduce using rule 4 (sentencia -> print PTCOMA .)


state 10

    (5) sentencia -> RLET ID . DOSPTS tipo IGUAL expresion PTCOMA
    (6) sentencia -> RLET ID . PTCOMA
    (7) sentencia -> RLET ID . IGUAL expresion PTCOMA
    (8) sentencia -> RLET ID . DOSPTS tipo PTCOMA

    DOSPTS          shift and go to state 13
    PTCOMA          shift and go to state 15
    IGUAL           shift and go to state 14


state 11

    (9) sentencia -> RINTERFACE ID . LLAVEI atributos LLAVED

    LLAVEI          shift and go to state 16


state 12

    (16) print -> RCONSOLE PT . RLOG PARENI expresion PAREND

    RLOG            shift and go to state 17


state 13

    (5) sentencia -> RLET ID DOSPTS . tipo IGUAL expresion PTCOMA
    (8) sentencia -> RLET ID DOSPTS . tipo PTCOMA
    (12) tipo -> . RSTRING
    (13) tipo -> . RANY
    (14) tipo -> . RNUMBER
    (15) tipo -> . RBOOLEAN

    RSTRING         shift and go to state 19
    RANY            shift and go to state 20
    RNUMBER         shift and go to state 21
    RBOOLEAN        shift and go to state 22

    tipo                           shift and go to state 18

state 14

    (7) sentencia -> RLET ID IGUAL . expresion PTCOMA
    (17) expresion -> . expresion MAS expresion
    (18) expresion -> . expresion MENOS expresion
    (19) expresion -> . expresion MUL expresion
    (20) expresion -> . expresion DIV expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion POT expresion
    (23) expresion -> . NOT expresion
    (24) expresion -> . expresion IGUALACION expresion
    (25) expresion -> . expresion DISTINTO expresion
    (26) expresion -> . expresion MAYORQ expresion
    (27) expresion -> . expresion MENORQ expresion
    (28) expresion -> . expresion MAYORIG expresion
    (29) expresion -> . expresion MENORIG expresion
    (30) expresion -> . expresion OR expresion
    (31) expresion -> . expresion AND expresion
    (32) expresion -> . MENOS expresion
    (33) expresion -> . PARENI expresion PAREND
    (34) expresion -> . RTRUE
    (35) expresion -> . RFALSE
    (36) expresion -> . RNULL
    (37) expresion -> . ENTERO
    (38) expresion -> . DECIMAL
    (39) expresion -> . CADENA
    (40) expresion -> . nativa
    (41) expresion -> . CORI valores CORD
    (44) nativa -> . tofixed
    (45) nativa -> . toexponential
    (46) nativa -> . tostring
    (47) nativa -> . tolowercase
    (48) nativa -> . touppercase
    (49) nativa -> . split
    (50) nativa -> . concat
    (51) tofixed -> . expresion PT RFIXED PARENI expresion PAREND
    (52) toexponential -> . expresion PT REXPONENTIAL PARENI expresion PAREND
    (53) tostring -> . expresion PT RTSTRING PARENI PAREND
    (54) tolowercase -> . expresion PT RLC PARENI PAREND
    (55) touppercase -> . expresion PT RUC PARENI PAREND
    (56) split -> . expresion PT RSPLIT PARENI expresion PAREND
    (57) concat -> . expresion PT RCONCAT PARENI expresion PAREND

    NOT             shift and go to state 25
    MENOS           shift and go to state 24
    PARENI          shift and go to state 26
    RTRUE           shift and go to state 27
    RFALSE          shift and go to state 28
    RNULL           shift and go to state 29
    ENTERO          shift and go to state 30
    DECIMAL         shift and go to state 31
    CADENA          shift and go to state 32
    CORI            shift and go to state 34

    expresion                      shift and go to state 23
    nativa                         shift and go to state 33
    tofixed                        shift and go to state 35
    toexponential                  shift and go to state 36
    tostring                       shift and go to state 37
    tolowercase                    shift and go to state 38
    touppercase                    shift and go to state 39
    split                          shift and go to state 40
    concat                         shift and go to state 41

state 15

    (6) sentencia -> RLET ID PTCOMA .

    RLET            reduce using rule 6 (sentencia -> RLET ID PTCOMA .)
    RINTERFACE      reduce using rule 6 (sentencia -> RLET ID PTCOMA .)
    RCONSOLE        reduce using rule 6 (sentencia -> RLET ID PTCOMA .)
    $end            reduce using rule 6 (sentencia -> RLET ID PTCOMA .)


state 16

    (9) sentencia -> RINTERFACE ID LLAVEI . atributos LLAVED
    (10) atributos -> . ID DOSPTS tipo PTCOMA atributos
    (11) atributos -> . ID DOSPTS tipo PTCOMA

    ID              shift and go to state 42

    atributos                      shift and go to state 43

state 17

    (16) print -> RCONSOLE PT RLOG . PARENI expresion PAREND

    PARENI          shift and go to state 44


state 18

    (5) sentencia -> RLET ID DOSPTS tipo . IGUAL expresion PTCOMA
    (8) sentencia -> RLET ID DOSPTS tipo . PTCOMA

    IGUAL           shift and go to state 45
    PTCOMA          shift and go to state 46


state 19

    (12) tipo -> RSTRING .

    IGUAL           reduce using rule 12 (tipo -> RSTRING .)
    PTCOMA          reduce using rule 12 (tipo -> RSTRING .)


state 20

    (13) tipo -> RANY .

    IGUAL           reduce using rule 13 (tipo -> RANY .)
    PTCOMA          reduce using rule 13 (tipo -> RANY .)


state 21

    (14) tipo -> RNUMBER .

    IGUAL           reduce using rule 14 (tipo -> RNUMBER .)
    PTCOMA          reduce using rule 14 (tipo -> RNUMBER .)


state 22

    (15) tipo -> RBOOLEAN .

    IGUAL           reduce using rule 15 (tipo -> RBOOLEAN .)
    PTCOMA          reduce using rule 15 (tipo -> RBOOLEAN .)


state 23

    (7) sentencia -> RLET ID IGUAL expresion . PTCOMA
    (17) expresion -> expresion . MAS expresion
    (18) expresion -> expresion . MENOS expresion
    (19) expresion -> expresion . MUL expresion
    (20) expresion -> expresion . DIV expresion
    (21) expresion -> expresion . MOD expresion
    (22) expresion -> expresion . POT expresion
    (24) expresion -> expresion . IGUALACION expresion
    (25) expresion -> expresion . DISTINTO expresion
    (26) expresion -> expresion . MAYORQ expresion
    (27) expresion -> expresion . MENORQ expresion
    (28) expresion -> expresion . MAYORIG expresion
    (29) expresion -> expresion . MENORIG expresion
    (30) expresion -> expresion . OR expresion
    (31) expresion -> expresion . AND expresion
    (51) tofixed -> expresion . PT RFIXED PARENI expresion PAREND
    (52) toexponential -> expresion . PT REXPONENTIAL PARENI expresion PAREND
    (53) tostring -> expresion . PT RTSTRING PARENI PAREND
    (54) tolowercase -> expresion . PT RLC PARENI PAREND
    (55) touppercase -> expresion . PT RUC PARENI PAREND
    (56) split -> expresion . PT RSPLIT PARENI expresion PAREND
    (57) concat -> expresion . PT RCONCAT PARENI expresion PAREND

    PTCOMA          shift and go to state 47
    MAS             shift and go to state 48
    MENOS           shift and go to state 49
    MUL             shift and go to state 50
    DIV             shift and go to state 51
    MOD             shift and go to state 52
    POT             shift and go to state 53
    IGUALACION      shift and go to state 54
    DISTINTO        shift and go to state 55
    MAYORQ          shift and go to state 56
    MENORQ          shift and go to state 57
    MAYORIG         shift and go to state 58
    MENORIG         shift and go to state 59
    OR              shift and go to state 60
    AND             shift and go to state 61
    PT              shift and go to state 62


state 24

    (32) expresion -> MENOS . expresion
    (17) expresion -> . expresion MAS expresion
    (18) expresion -> . expresion MENOS expresion
    (19) expresion -> . expresion MUL expresion
    (20) expresion -> . expresion DIV expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion POT expresion
    (23) expresion -> . NOT expresion
    (24) expresion -> . expresion IGUALACION expresion
    (25) expresion -> . expresion DISTINTO expresion
    (26) expresion -> . expresion MAYORQ expresion
    (27) expresion -> . expresion MENORQ expresion
    (28) expresion -> . expresion MAYORIG expresion
    (29) expresion -> . expresion MENORIG expresion
    (30) expresion -> . expresion OR expresion
    (31) expresion -> . expresion AND expresion
    (32) expresion -> . MENOS expresion
    (33) expresion -> . PARENI expresion PAREND
    (34) expresion -> . RTRUE
    (35) expresion -> . RFALSE
    (36) expresion -> . RNULL
    (37) expresion -> . ENTERO
    (38) expresion -> . DECIMAL
    (39) expresion -> . CADENA
    (40) expresion -> . nativa
    (41) expresion -> . CORI valores CORD
    (44) nativa -> . tofixed
    (45) nativa -> . toexponential
    (46) nativa -> . tostring
    (47) nativa -> . tolowercase
    (48) nativa -> . touppercase
    (49) nativa -> . split
    (50) nativa -> . concat
    (51) tofixed -> . expresion PT RFIXED PARENI expresion PAREND
    (52) toexponential -> . expresion PT REXPONENTIAL PARENI expresion PAREND
    (53) tostring -> . expresion PT RTSTRING PARENI PAREND
    (54) tolowercase -> . expresion PT RLC PARENI PAREND
    (55) touppercase -> . expresion PT RUC PARENI PAREND
    (56) split -> . expresion PT RSPLIT PARENI expresion PAREND
    (57) concat -> . expresion PT RCONCAT PARENI expresion PAREND

    NOT             shift and go to state 25
    MENOS           shift and go to state 24
    PARENI          shift and go to state 26
    RTRUE           shift and go to state 27
    RFALSE          shift and go to state 28
    RNULL           shift and go to state 29
    ENTERO          shift and go to state 30
    DECIMAL         shift and go to state 31
    CADENA          shift and go to state 32
    CORI            shift and go to state 34

    expresion                      shift and go to state 63
    nativa                         shift and go to state 33
    tofixed                        shift and go to state 35
    toexponential                  shift and go to state 36
    tostring                       shift and go to state 37
    tolowercase                    shift and go to state 38
    touppercase                    shift and go to state 39
    split                          shift and go to state 40
    concat                         shift and go to state 41

state 25

    (23) expresion -> NOT . expresion
    (17) expresion -> . expresion MAS expresion
    (18) expresion -> . expresion MENOS expresion
    (19) expresion -> . expresion MUL expresion
    (20) expresion -> . expresion DIV expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion POT expresion
    (23) expresion -> . NOT expresion
    (24) expresion -> . expresion IGUALACION expresion
    (25) expresion -> . expresion DISTINTO expresion
    (26) expresion -> . expresion MAYORQ expresion
    (27) expresion -> . expresion MENORQ expresion
    (28) expresion -> . expresion MAYORIG expresion
    (29) expresion -> . expresion MENORIG expresion
    (30) expresion -> . expresion OR expresion
    (31) expresion -> . expresion AND expresion
    (32) expresion -> . MENOS expresion
    (33) expresion -> . PARENI expresion PAREND
    (34) expresion -> . RTRUE
    (35) expresion -> . RFALSE
    (36) expresion -> . RNULL
    (37) expresion -> . ENTERO
    (38) expresion -> . DECIMAL
    (39) expresion -> . CADENA
    (40) expresion -> . nativa
    (41) expresion -> . CORI valores CORD
    (44) nativa -> . tofixed
    (45) nativa -> . toexponential
    (46) nativa -> . tostring
    (47) nativa -> . tolowercase
    (48) nativa -> . touppercase
    (49) nativa -> . split
    (50) nativa -> . concat
    (51) tofixed -> . expresion PT RFIXED PARENI expresion PAREND
    (52) toexponential -> . expresion PT REXPONENTIAL PARENI expresion PAREND
    (53) tostring -> . expresion PT RTSTRING PARENI PAREND
    (54) tolowercase -> . expresion PT RLC PARENI PAREND
    (55) touppercase -> . expresion PT RUC PARENI PAREND
    (56) split -> . expresion PT RSPLIT PARENI expresion PAREND
    (57) concat -> . expresion PT RCONCAT PARENI expresion PAREND

    NOT             shift and go to state 25
    MENOS           shift and go to state 24
    PARENI          shift and go to state 26
    RTRUE           shift and go to state 27
    RFALSE          shift and go to state 28
    RNULL           shift and go to state 29
    ENTERO          shift and go to state 30
    DECIMAL         shift and go to state 31
    CADENA          shift and go to state 32
    CORI            shift and go to state 34

    expresion                      shift and go to state 64
    nativa                         shift and go to state 33
    tofixed                        shift and go to state 35
    toexponential                  shift and go to state 36
    tostring                       shift and go to state 37
    tolowercase                    shift and go to state 38
    touppercase                    shift and go to state 39
    split                          shift and go to state 40
    concat                         shift and go to state 41

state 26

    (33) expresion -> PARENI . expresion PAREND
    (17) expresion -> . expresion MAS expresion
    (18) expresion -> . expresion MENOS expresion
    (19) expresion -> . expresion MUL expresion
    (20) expresion -> . expresion DIV expresion
    (21) expresion -> . expresion MOD expresion
    (22) expresion -> . expresion POT expresion
    (23) expresion -> . NOT expresion
    (24) expresion -> . expresion IGUALACION expresion
    (25) expresion -> . expresion DISTINTO expresion
    (26) expresion -> . expresion MAYORQ expresion
    (27) expresion -> . expresion MENORQ expresion
    (28) expresion -> . expresion MAYORIG expresion
    (29) expresion -> . expresion MENORIG expresion
    (30) expresion -> . expresion OR expresion
    (31) expresion -> . expresion AND expresion
    (32) expresion -> . MENOS expresion
    (33) expresion -> . PARENI expresion PAREND
    (34) expresion -> . RTRUE
    (35) expresion -> . RFALSE
    (36) expresion -> . RNULL
    (37) expresion -> . ENTERO
    (38) expresion -> . DECIMAL
    (39) expresion -> . CADENA
    (40) expresion -> . nativa
    (41) expresion -> . CORI valores CORD
    (44) nativa -> . tofixed
    (45) nativa -> . toexponential
    (46) nativa -> . tostring
    (47) nativa -> . tolowercase
    (48) nativa -> . touppercase
    (49) nativa -> . split
    (50) nativa -> . concat
    (51) tofixed -> . expresion PT RFIXED PARENI expresion PAREND
    (52) toexponential -> . expresion PT REXPONENTIAL PARENI expresion PAREND
    (53) tostring -> . expresion PT RTSTRING PARENI PAREND
    (54) tolowercase -> . expresion PT RLC PARENI PAREND
    (55) touppercase -> . expresion PT RUC PARENI PAREND
    (56) split -> . expresion PT RSPLIT PARENI expresion PAREND
    (57) concat -> . expresion PT RCONCAT PARENI expresion PAREND

    NOT             shift and go to state 25
    MENOS           shift and go to state 24
    PARENI          shift and go to state 26
    RTRUE           shift and go to state 27
    RFALSE          shift and go to state 28
    RNULL           shift and go to state 29
    ENTERO          shift and go to state 30
    DECIMAL         shift and go to state 31
    CADENA          shift and go to state 32
    CORI            shift and go to state 34

    expresion                      shift and go to state 65
    nativa                         shift and go to state 33
    tofixed                        shift and go to state 35
    toexponential                  shift and go to state 36
    tostring                       shift and go to state 37
    tolowercase                    shift and go to state 38
    touppercase                    shift and go to state 39
    split                          shift and go to state 40
    concat                         shift and go to state 41

state 27

    (34) expresion -> RTRUE .

    PTCOMA          reduce using rule 34 (expresion -> RTRUE .)
    MAS             reduce using rule 34 (expresion -> RTRUE .)
    MENOS           reduce using rule 34 (expresion -> RTRUE .)
    MUL             reduce using rule 34 (expresion -> RTRUE .)
    DIV             reduce using rule 34 (expresion -> RTRUE .)
    MOD             reduce using rule 34 (expresion -> RTRUE .)
    POT             reduce using rule 34 (expresion -> RTRUE .)
    IGUALACION      reduce using rule 34 (expresion -> RTRUE .)
    DISTINTO        reduce using rule 34 (expresion -> RTRUE .)
    MAYORQ          reduce using rule 34 (expresion -> RTRUE .)
    MENORQ          reduce using rule 34 (expresion -> RTRUE .)
    MAYORIG         reduce using rule 34 (expresion -> RTRUE .)
    MENORIG         reduce using rule 34 (expresion -> RTRUE .)
    OR              reduce using rule 34 (expresion -> RTRUE .)
    AND             reduce using rule 34 (expresion -> RTRUE .)
    PT              reduce using rule 34 (expresion -> RTRUE .)
    PAREND          reduce using rule 34 (expresion -> RTRUE .)
    COMA            reduce using rule 34 (expresion -> RTRUE .)
    CORD            reduce using rule 34 (expresion -> RTRUE .)


state 28

    (35) expresion -> RFALSE .

    PTCOMA          reduce using rule 35 (expresion -> RFALSE .)
    MAS             reduce using rule 35 (expresion -> RFALSE .)
    MENOS           reduce using rule 35 (expresion -> RFALSE .)
    MUL             reduce using rule 35 (expresion -> RFALSE .)
    DIV             reduce using rule 35 (expresion -> RFALSE .)
    MOD             reduce using rule 35 (expresion -> RFALSE .)
    POT             reduce using rule 35 (expresion -> RFALSE .)
    IGUALACION      reduce using rule 35 (expresion -> RFALSE .)
    DISTINTO        reduce using rule 35 (expresion -> RFALSE .)
    MAYORQ          reduce using rule 35 (expresion -> RFALSE .)
    MENORQ          reduce using rule 35 (expresion -> RFALSE .)
    MAYORIG         reduce using rule 35 (expresion -> RFALSE .)
    MENORIG         reduce using rule 35 (expresion -> RFALSE .)
    OR              reduce using rule 35 (expresion -> RFALSE .)
    AND             reduce using rule 35 (expresion -> RFALSE .)
    PT              reduce using rule 35 (expresion -> RFALSE .)
    PAREND          reduce using rule 35 (expresion -> RFALSE .)
    COMA            reduce using rule 35 (expresion -> RFALSE .)
    CORD            reduce using rule 35 (expresion -> RFALSE .)


state 29

    (36) expresion -> RNULL .

    PTCOMA          reduce using rule 36 (expresion -> RNULL .)
    MAS             reduce using rule 36 (expresion -> RNULL .)
    MENOS           reduce using rule 36 (expresion -> RNULL .)
    MUL             reduce using rule 36 (expresion -> RNULL .)
    DIV             reduce using rule 36 (expresion -> RNULL .)
    MOD             reduce using rule 36 (expresion -> RNULL .)
    POT             reduce using rule 36 (expresion -> RNULL .)
    IGUALACION      reduce using rule 36 (expresion -> RNULL .)
    DISTINTO        reduce using rule 36 (expresion -> RNULL .)
    MAYORQ          reduce using rule 36 (expresion -> RNULL .)
    MENORQ          reduce using rule 36 (expresion -> RNULL .)
    MAYORIG         reduce using rule 36 (expresion -> RNULL .)
    MENORIG         reduce using rule 36 (expresion -> RNULL .)
    OR              reduce using rule 36 (expresion -> RNULL .)
    AND             reduce using rule 36 (expresion -> RNULL .)
    PT              reduce using rule 36 (expresion -> RNULL .)
    PAREND          reduce using rule 36 (expresion -> RNULL .)
    COMA            reduce using rule 36 (expresion -> RNULL .)
    CORD            reduce using rule 36 (expresion -> RNULL .)


state 30

    (37) expresion -> ENTERO .

    PTCOMA          reduce using rule 37 (expresion -> ENTERO .)
    MAS             reduce using rule 37 (expresion -> ENTERO .)
    MENOS           reduce using rule 37 (expresion -> ENTERO .)
    MUL             reduce using rule 37 (expresion -> ENTERO .)
    DIV             reduce using rule 37 (expresion -> ENTERO .)
    MOD             reduce using rule 37 (expresion -> ENTERO .)
    POT             reduce using rule 37 (expresion -> ENTERO .)
    IGUALACION      reduce using rule 37 (expresion -> ENTERO .)
    DISTINTO        reduce using rule 37 (expresion -> ENTERO .)
    MAYORQ          reduce using rule 37 (expresion -> ENTERO .)
    MENORQ          reduce using rule 37 (expresion -> ENTERO .)
    MAYORIG         reduce using rule 37 (expresion -> ENTERO .)
    MENORIG         reduce using rule 37 (expresion -> ENTERO .)
    OR              reduce using rule 37 (expresion -> ENTERO .)
    AND             reduce using rule 37 (expresion -> ENTERO .)
    PT              reduce using rule 37 (expresion -> ENTERO .)
    PAREND          reduce using rule 37 (expresion -> ENTERO .)
    COMA            reduce using rule 37 (expresion -> ENTERO .)
    CORD            reduce using rule 37 (expresion -> ENTERO .)


state 31

    (38) expresion -> DECIMAL .

    PTCOMA          reduce using rule 38 (expresion -> DECIMAL .)
    MAS             reduce using rule 38 (expresion -> DECIMAL .)
    MENOS           reduce using rule 38 (expresion -> DECIMAL .)
    MUL             reduce using rule 38 (expresion -> DECIMAL .)
    DIV             reduce using rule 38 (expresion -> DECIMAL .)
    MOD             reduce using rule 38 (expresion -> DECIMAL .)
    POT             reduce using rule 38 (expresion -> DECIMAL .)
    IGUALACION      reduce using rule 38 (expresion -> DECIMAL .)
    DISTINTO        reduce using rule 38 (expresion -> DECIMAL .)
    MAYORQ          reduce using rule 38 (expresion -> DECIMAL .)
    MENORQ          reduce using rule 38 (expresion -> DECIMAL .)
    MAYORIG         reduce using rule 38 (expresion -> DECIMAL .)
    MENORIG         reduce using rule 38 (expresion -> DECIMAL .)
    OR              reduce using rule 38 (expresion -> DECIMAL .)
    AND             reduce using rule 38 (expresion -> DECIMAL .)
    PT              reduce using rule 38 (expresion -> DECIMAL .)
    PAREND          reduce using rule 38 (expresion -> DECIMAL .)
    COMA            reduce using rule 38 (expresion -> DECIMAL .)
    CORD            reduce using rule 38 (expresion -> DECIMAL .)


state 32

    (39) expresion -> CADENA .

    PTCOMA          reduce using rule 39 (expresion -> CADENA .)
    MAS             reduce using rule 39 (expresion -> CADENA .)
    MENOS           reduce using rule 39 (expresion -> CADENA .)
    MUL             reduce using rule 39 (expresion -> CADENA .)
    DIV             reduce using rule 39 (expresion -> CADENA .)
    MOD             reduce using rule 39 (expresion -> CADENA .)
    POT             reduce using rule 39 (expresion -> CADENA .)
    IGUALACION      reduce using rule 39 (expresion -> CADENA .)
    DISTINTO        reduce using rule 39 (expresion -> CADENA .)
    MAYORQ          reduce using rule 39 (expresion -> CADENA .)
    MENORQ          reduce using rule 39 (expresion -> CADENA .)
    MAYORIG         reduce using rule 39 (expresion -> CADENA .)
    MENORIG         reduce using rule 39 (expresion -> CADENA .)
    OR              reduce using rule 39 (expresion -> CADENA .)
    AND             reduce using rule 39 (expresion -> CADENA .)
    PT              reduce using rule 39 (expresion -> CADENA .)
    PAREND          reduce using rule 39 (expresion -> CADENA .)
    COMA            reduce using rule 39 (expresion -> CADENA .)
    CORD            reduce using rule 39 (expresion -> CADENA .)


state 33

    (40) expresion -> nativa .

    PTCOMA          reduce using rule 40 (expresion -> nativa .)
    MAS             reduce using rule 40 (expresion -> nativa .)
    MENOS           reduce using rule 40 (expresion -> nativa .)
    MUL             reduce using rule 40 (expresion -> nativa .)
    DIV             reduce using rule 40 (expresion -> nativa .)
    MOD             reduce using rule 40 (expresion -> nativa .)
    POT             reduce using rule 40 (expresion -> nativa .)
    IGUALACION      reduce using rule 40 (expresion -> nativa .)
    DISTINTO        reduce using rule 40 (expresion -> nativa .)
    MAYORQ          reduce using rule 40 (expresion -> nativa .)
    MENORQ          reduce using rule 40 (expresion -> nativa .)
    MAYORIG         reduce using rule 40 (expresion -> nativa .)
    MENORIG         reduce using rule 40 (expresion -> nativa .)
    OR              reduce using rule 40 (expresion -> nativa .)
    AND             reduce using rule 40 (expresion -> nativa .)
    PT              reduce using rule 40 (expresion -> nativa .)
    PAREND          reduce using rule 40 (expresion -> nativa .)
    COMA            reduce using rule 40 (expresion -> nativa .)
    CORD            reduce using rule 40 (expresion -> nativa .)


state 34
